--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     
     <!--Rodapé-->
     <footer>
-        <p>Site criado por Cauã preguisoço.</p>
+        <p>Site criado por ninguém.</p>
     </footer>
 </body>
 </html>
